--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Angular play</title>
-
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="public/css/main.css">
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
@@ -12,7 +12,7 @@
 	
 </head>
 <body>
-
+	<h1>Flickr Public Feed</h1>
 	<div class="container">
         <div class="slide" ng-view></div>
     </div>
@@ -22,5 +22,6 @@
 	<script src="app.js"></script>
 	<script src="service/photoList.js"></script>
 	<script src="controllers/listController.js"></script>
+	<script src="controllers/detailController.js"></script>
 </body>
 </html>
