--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
 	<title>Angular play</title>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="public/css/main.css">
-	<script src="bower_components/angular/angular.min.js"></script>
-	<script src="bower_components/angular-route/angular-route.min.js"></script>
-	<script src="bower_components/angular-animate/angular-animate.min.js"></script>
+	<script src="../bower_components/angular/angular.min.js"></script>
+	<script src="../bower_components/angular-route/angular-route.min.js"></script>
+	<script src="../bower_components/angular-animate/angular-animate.min.js"></script>
 	
 </head>
 <body>
